syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerCurrencyProto";

service NifflerCurrencyService {
  rpc GetAllCurrencies (google.protobuf.Empty) returns (CurrencyResponse) {
  }
}

message CurrencyResponse {
  repeated Currency allCurrencies = 1;

}

message Currency {
  CurrencyValues currency = 1;
  double currencyRate = 2;
}

enum CurrencyValues {
  RUB = 0;
  USD = 1;
  EUR = 2;
  KZT = 3;
}
